完成预定的demo

--- a/templates/base.html
+++ b/templates/base.html
@@ -110,7 +110,8 @@
 <script src="{% static 'assets/js/bootstrap-multiselect.min.js' %}"></script>
 <script src="{% static 'assets/js/jquery.bootstrap-duallistbox.min.js' %}"></script>
 <script src="{% static 'assets/js/select2.min.js' %}"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.0/js.cookie.js"></script>
+{#<script src="https://cdn.bootcss.com/vue/1.0.28/vue.js"></script>#}
 {% block external_script %}
 {% endblock %}
 </body>
