完成预定的demo

--- a/templates/book.html
+++ b/templates/book.html
@@ -151,7 +151,7 @@
             mailToMember: true,
             userApiUrl: "{% url 'bookmeeting:users' %}",
             bookApiUrl: "{% url 'bookmeeting:booking' %}",
-            userList: [],
+            userList: []
         };
 
         var app_content = new Vue({
